chore(fcv): make seeders autoloadable via host fallback seeder and adjust package autoload for database

--- a/packages/fcv/composer.json
+++ b/packages/fcv/composer.json
@@ -6,8 +6,12 @@
   "license": "MIT",
   "autoload": {
     "psr-4": {
-      "Like\\Fcv\\": "src/"
-    }
+      "Like\\Fcv\\": "src/",
+      "Like\\Fcv\\Database\\": "database/"
+    },
+    "classmap": [
+      "database/Seeders"
+    ]
   },
   "extra": {
     "laravel": {
