--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.9",
-        "spatie/laravel-permission": "^6.21",
-        "like/fcv-access": "*"
+        "like/fcv-access": "*",
+        "maatwebsite/excel": "^1.1",
+        "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
